Updated for 1.20.6